# chess

./: CMakeLists.txt  README.md
src/: app.cpp  app.h  bishop.cpp  bishop.h  board.cpp  board.h  clear_array.h  constant.h  evaluate.cpp  evaluate.h  init.h  jumping_figure.cpp  jumping_figure.h  king.cpp  king.h  knight.cpp  knight.h  magic_bitboard.cpp  magic_bitboard.h  main.cpp  material_evaluate.cpp  material_evaluate.h  misc.cpp  misc.h  move_gen_test.h  move_list.cpp  move_list.h  move_ordering.cpp  move_ordering.h  pawn.cpp  pawn.h  positional_evaluate.cpp  positional_evaluate.h  queen.cpp  queen.h  repetition_history.cpp  repetition_history.h  rook.cpp  rook.h  search.cpp  (+8 more)
